# acado-release

./: 0001-Add-package.xml-install-rule.patch  0001-Patch-in-install-rule-for-package.xml.patch  0001-Patched-in-installation-rule-for-package.xml.patch  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/acado/code_generation/: export_templated_file.hpp
indigo/: package.xml
rpm/: ros-hydro-acado.spec  ros-indigo-acado.spec  template.spec
